--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "content-subcription",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
